ghc-4335c07/testsuite/tests/indexed-types/should_compile/T8979.hs
{-# LANGUAGE TypeFamilies #-}
module T8979 where

type family F a
type family G a

type H a = G a

f :: F (G Char) -> F (H Char)
f a = a
