ghc-4335c07/testsuite/tests/indexed-types/should_fail/SimpleFail16.hs
{-# LANGUAGE TypeFamilies #-}

module ShouldFail where

type family F a

foo :: p a -> p a
foo x = x

bar = foo (undefined :: F ())

